schema/testdata/errors/set_attribute_ctx_identity_fields_invalid_types.keel
model UserExtension {
    fields {
        email Number
        isVerified Number
        signedUpAt Number
        issuer Number
        externalId Number
    }

    actions {
        create createExt() {
            //expect-error:40:58:AttributeExpressionError:expression expected to resolve to type Number but it is Text
            @set(userExtension.email = ctx.identity.email)
            //expect-error:45:71:AttributeExpressionError:expression expected to resolve to type Number but it is Boolean
            @set(userExtension.isVerified = ctx.identity.emailVerified)
            //expect-error:45:67:AttributeExpressionError:expression expected to resolve to type Number but it is Timestamp
            @set(userExtension.signedUpAt = ctx.identity.createdAt)
            //expect-error:41:60:AttributeExpressionError:expression expected to resolve to type Number but it is Text
            @set(userExtension.issuer = ctx.identity.issuer)
            //expect-error:45:68:AttributeExpressionError:expression expected to resolve to type Number but it is Text
            @set(userExtension.externalId = ctx.identity.externalId)
            @permission(expression: ctx.isAuthenticated)
        }
        update updateExt(id) {
            //expect-error:40:58:AttributeExpressionError:expression expected to resolve to type Number but it is Text
            @set(userExtension.email = ctx.identity.email)
            //expect-error:45:71:AttributeExpressionError:expression expected to resolve to type Number but it is Boolean
            @set(userExtension.isVerified = ctx.identity.emailVerified)
            //expect-error:45:67:AttributeExpressionError:expression expected to resolve to type Number but it is Timestamp
            @set(userExtension.signedUpAt = ctx.identity.createdAt)
            //expect-error:41:60:AttributeExpressionError:expression expected to resolve to type Number but it is Text
            @set(userExtension.issuer = ctx.identity.issuer)
            //expect-error:45:68:AttributeExpressionError:expression expected to resolve to type Number but it is Text
            @set(userExtension.externalId = ctx.identity.externalId)
            @permission(expression: ctx.isAuthenticated)
        }
    }
}
